# cmake-python-swig-rpath-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  stats.cc  stats.hh  stats.i
test/: test.py
